--- a/src/app/task-board/task-board.component.html
+++ b/src/app/task-board/task-board.component.html
@@ -1,3 +1,39 @@
-<p>
-  task-board works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!-- Navbar content -->
+  <a class="navbar-brand" href="#">Task Manager</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"></a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      <!-- Navbar text with an inline element -->
+    </span>
+  </div>
+</nav>
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link" href="#" (click) ="toggleTab()" [ngClass]="isAddTaskSelected ? 'active' : ''" routerLink="/addTask">Add Task</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" routerLink="/viewTask" [ngClass]="isViewTaskSelected ? 'active' : ''" (click) ="toggleTab()">View Tasks</a>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
+    <!-- <app-add-task></app-add-task> -->
+    <router-outlet></router-outlet>
+  </div>
+</div>
