--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,53 +1,54 @@
-<h1 class="display-6 shadow-lg p-3 mb-5 bg-white rounded">Add Task</h1>
+<h1 class="display-6 shadow-lg p-3 mb-5 bg-white rounded">{{formTitle}} Task</h1>
 
 <div class="jumbotron shadow-lg p-3 mb-5 bg-white rounded">
   <div class="container">
-      <div class="alert alert-success" role="alert">
-          Data Saved successfully!
+      <div class="alert alert-success" role="alert" [ngClass]="isSuccess?'':'d-none'">
+         {{successMessage}}
         </div>
-        <div class="alert alert-danger" role="alert">
-            Unable to save Data, Please try again!
+        <div class="alert alert-danger" role="alert" [ngClass]="isError?'':'d-none'">
+            {{errorMessage}}
           </div>
     <div class="lead">
       <form>
         <div class="form-group row">
           <label class="col-sm-2 col-md-3 col-lg-2 col-form-label">Task</label>
           <div class="col-sm-10 col-md-9 col-lg-10">
-            <input type="text" class="form-control" id="task" value="" placeholder="Task">
+            <input type="text" class="form-control" name="task" placeholder="Task" [(ngModel)]="task">
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-md-3 col-lg-2 col-form-label">Priority</label>
-          <div class="col-sm-10 col-md-9 col-lg-10">
+          <div class="col-sm-10 col-md-9 col-lg-10 cls-center">
             <label class="range-label">0</label>
-            <input type="range" class="form-control-range" min="0" max="30">
+            <input type="range" class="form-control-range" name="priority" min="0" max="30" [(ngModel)]="priority">
             <label class="range-label">30</label>
+            <span>{{priority}}</span>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-md-3 col-lg-2 col-form-label">Parent Task</label>
           <div class="col-sm-10 col-md-9 col-lg-10">
-            <input type="text" class="form-control" id="parentTask" value="" placeholder="Parent Task">
+            <input type="text" class="form-control" id="parentTask" name="parentTask" placeholder="Parent Task" [(ngModel)]="parentTask">
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-md-3 col-lg-2 col-form-label">Start Date</label>
           <div class="col-sm-4 col-md-3 col-lg-4">
-            <input type="date" class="form-control" value="">
+            <input type="date" class="form-control" [(ngModel)]="startDate" name="startDate">
           </div>
           <label class="col-sm-2 col-md-3 col-lg-2 col-form-label">End Date</label>
           <div class="col-sm-4 col-md-3 col-lg-4">
-            <input type="date" class="form-control" value="">
+            <input type="date" class="form-control" [(ngModel)]="endDate" name="endDate">
           </div>
         </div>
         <div class="row">
           <div class="col-sm-3"></div>
           <div class="col-sm-3"></div>
           <div class="col-sm-3">
-            <button type="button" class="btn btn-secondary btn-lg btn-block">Reset</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block" (click)="resetForm(true)">Reset</button>
           </div>
           <div class="col-sm-3">
-            <button type="button" class="btn btn-primary btn-lg btn-block">Add Task</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" (click)="addTask()">{{formTitle}}</button>
           </div>
         </div>
       </form>
